[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/objects/camera/camera.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
current = true
zoom = Vector2( 1.5, 1.5 )
process_mode = 0
smoothing_enabled = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]

[node name="ShakeTimer" type="Timer" parent="."]
